# syncbyte

./: .dockerignore  .gitignore  Dockerfile  Makefile  agent.toml  docker-compose.yaml  engine.toml  go.mod  go.sum  pyproject.toml  syncbyte.http  wsgi.py
alembic/: env.py
alembic/versions/: 69af85c88076_2.py  8c82bd31ef9a_1.py
api/: server.go
app/core/: config.py  policy.py
app/core/database/: models.py
app/core/job/: scheduling.py
app/database/: models.py  session.py
app/webapi/: __init__.py
app/webapi/backup/: __init__.py  backup.py  controller.py
cmd/: main.go
cmd/agent/: main.go
cmd/engine/: main.go
cmd/syncbytectl/: cmdCreate.go  cmdRoot.go
cmd/syncbytectl/config/: config.go
cmd/syncbytectl/grpc/: api.go  client.go
deploy/agent/: configmap.yaml  deployment.yaml  service.yaml
helm-chart/: Chart.yaml  values.yaml
helm-chart/templates/: configmap.yaml  deployment.yaml  service.yaml
internal/agent/: agent.go  backup.go  config.go  datastore.go  datastore_darwin.go  datastore_linux.go  worker.go
internal/engine/apiserver/: apiserver.go  auth.go
internal/engine/backup/: backup.go  backupset.go  policy.go
internal/engine/config/: config.go
internal/proto/: api.pb.go  api.proto  api_grpc.pb.go  proto.go  syncbyte.pb.go  syncbyte.proto  syncbyte_grpc.pb.go
pkg/database/: database.go  options.go
pkg/logging/: logging.go
syncbyte/: backupjob.go  backupset.go  db.go  policy.go  policy_test.go  resource.go  scheduledjob.go  task.go  worker.go
syncbyte/database/: database.go  mysql.go
syncbyte/job/: job.go
(+22 files in other folders)
