[tool.poetry]
name = "syncbyte"
version = "0.1.0"
description = ""
authors = ["skyline93 <greene9832@163.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^2.3.1"
celery = "^5.2.7"
sqlalchemy = "^2.0.11"
alembic = "^1.10.4"
pydantic = "^1.10.7"
python-dotenv = "^1.0.0"
psycopg2-binary = "^2.9.6"
webargs = "^8.2.0"
gunicorn = "^20.1.0"


[tool.poetry.group.dev.dependencies]
isort = "^5.12.0"
ipython = "^8.12.0"


[tool.poetry.group.test.dependencies]
pytest = "^7.3.1"


[[tool.poetry.source]]
name = "aliyun"
url = "https://mirrors.aliyun.com/pypi/simple/"
default = true
secondary = false

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
